feat: connect core resources to generated clients
